fixing project subtitle on mobile devices

--- a/src/components/Projects/projects.css
+++ b/src/components/Projects/projects.css
@@ -43,10 +43,6 @@
 
 /* Iphone */
 @media screen and (max-width: 600px) {
-    .project-content .intro {
-        flex-direction: column;
-        margin: 5rem 1rem;
-    }
 
     .project-content .intro .logo {
         height: 10rem;
